# noita-like-sim

./: .gitignore  4PASS_ALGORITHM_FIX.md  4PASS_ANALYSIS.md  4PASS_MECHANISM_FIX.md  4PASS_PATTERN_FIX.md  4PASS_RENDER_FIX.md  4PASS_VERIFICATION.md  ALL_BUILD.vcxproj.filters  BIDIRECTIONAL_SYNC_FIX.md  CHUNK_UPDATE_FIX.md  CLEANUP_SUMMARY.md  CMakeLists.txt  COMPLETE_FIX.md  DEBUG_MODE_FIX.md  DEMO_FEATURES.md  DOUBLE_RENDER_FIX.md  FEATURES.md  FINAL_FIX.md  FLICKER_FIX.md  IMPROVEMENTS.md  JITTER_FIX.md  LIQUID_FIX.md  MULTI_UPDATE_FIX.md  NoitaLike.sln  PROJECT_CLEANUP_REPORT.md  PROJECT_STRUCTURE.md  QUICKSTART.md  README.md  RENDER_PROCESS_FIX.md  SIMPLIFIED_FIX.md  SOLID_FIX.md  SYNC_DIRECTION_FIX.md  ULTIMATE_FIX.md  UNIFIED_BUFFER_FIX.md  ZERO_CHECK.vcxproj.filters  noita_like.vcxproj.filters  test_4pass.cpp  test_4pass_final.cpp  test_4pass_v2.cpp  test_sdl.cpp
config/materials/: basic_materials.json
config/reactions/: basic_reactions.json
docs/: BUILD_GUIDE.md  DEBUG_GUIDE.md  DEMO_GUIDE.md  NOITA_IMPLEMENTATION_GUIDE.md  NOITA_TECHNICAL_INSIGHTS.md  PROJECT_CODE_ANALYSIS.md
docs/archived/: BORDER_FIX_ANALYSIS.md  BUILD_SUCCESS_REPORT.md  PROJECT_COMPLETE_REPORT.md  PROJECT_FINAL_SUMMARY.md  REFACTOR_DESIGN.md  REFACTOR_SUMMARY.md
include/core/: Chunk.hpp  Pixel.hpp  Types.hpp  World.hpp
include/materials/: MaterialRegistry.hpp
include/threading/: WorkStealingPool.hpp
src/: demo_simple.cpp
src/core/: Chunk.cpp  World.cpp
src/materials/: MaterialRegistry.cpp
src/threading/: WorkStealingPool.cpp
tests/: MANUAL_TEST_GUIDE.md  TEST_REPORT.md  auto_test.cpp  compile_check.cpp  run_tests.bat  test_core.cpp  verify_headers.cpp  verify_headers2.cpp
